--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | NFT preview card component</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  Equilibrium #3429
+  <main>
+    <article>
+      <div class="container">
+        <picture>
+          <div class="main-image"><img src="images/image-equilibrium.jpg"
+              alt="an Equilibrium cube balance in the middle"></div>
+        </picture>
 
-  Our Equilibrium collection promotes balance and calm.
+        <div class="card-content">
+          <h1 class="card-title">Equilibrium #3429</h1>
+          <p class="card-description">Our Equilibrium collection promotes balance and calm.</p>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+          <div class="flex-group">
+            <p class="amount" data-icon="eth">0.041 ETH</p>
+            <p class="remaining-days" data-icon="clock">3 days left</p>
+          </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+          <hr>
+
+          <div class="creator">
+            <figure><img class="creator-avatar" src="images/image-avatar.png" alt="photo of Jules Wyvern"></figure>
+            <p class="creator-name">Creation of <span class="white-text">Jules Wyvern</span></p>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://aimaduddin.com">Aima Aimaduddin bin Bollhasan</a>.
+      </div>
+    </article>
+  </main>
+
 </body>
+
 </html>
